--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,11 +9,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>DigiWave</title>
+
+
     </head>
 
     <body>
-        <div>DigiWave: <a href="/index">Home</a></div>
-        <hr>
+
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('index') }}">Andes Audio</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{{ url_for('raspioff') }}">Power</a></li>
+                        <li><a href="#">Sources</a></li>
+                        <li><a href="{{ url_for('mpdconf') }}">MPD</a></li>
+                        <li><a href="#">Network</a></li>
+                        <li><a href="#">System</a></li>
+                    </ul>
+
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+
+
+
         {% block content %}{% endblock %}
+
+        </div>
     </body>
 </html>
