mpdconfig, networkconfig and systemconfig already showing the options but the logic is not implemented yet

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,9 +35,9 @@
                     <li><a href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="{{ url_for('raspioff') }}">Power</a></li>
                         <li><a href="#">Sources</a></li>
-                        <li><a href="{{ url_for('mpdconf') }}">MPD</a></li>
-                        <li><a href="#">Network</a></li>
-                        <li><a href="#">System</a></li>
+                        <li><a href="{{ url_for('mpdconfig') }}">MPD</a></li>
+                        <li><a href="{{ url_for('networkconfig') }}">Network</a></li>
+                        <li><a href="{{ url_for('systemconfig') }}">System</a></li>
                     </ul>
 
                 </div><!-- /.navbar-collapse -->
