power menu (reboot/shutdown) fully working

--- a/app/templates/googleconfig.html
+++ b/app/templates/googleconfig.html
@@ -22,6 +22,24 @@
         <br>
     </tr>
 
+    <tr>
+        <td>{{ form.all_access.label }}</td>
+        <td>{{ form.all_access }}</td>
+        <br>
+    </tr>
+
+    <tr>
+        <td>{{ form.bitrate.label }}</td>
+        <td>{{ form.bitrate }}</td>
+        <br>
+    </tr>
+
+    <tr>
+        <td>{{ form.device_id.label }}</td>
+        <td>{{ form.device_id }}</td>
+        <br>
+    </tr>
+
 
     <div>
         <button type="submit" class="btn btn-default">Accept</button>
