--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -11,8 +11,8 @@
     {{ form.hidden_tag() }}
 
     <tr>
-        <td>{{ form.onoff.label }}</td>
-        <td>{{ form.onoff }}</td>
+        <td>{{ form.on_off.label }}</td>
+        <td>{{ form.on_off }}</td>
     </tr>
 
     <div>
