--- a/app/templates/spotifyconfig.html
+++ b/app/templates/spotifyconfig.html
@@ -22,6 +22,24 @@
         <br>
     </tr>
 
+    <tr>
+        <td>{{ form.bitrate.label }}</td>
+        <td>{{ form.bitrate }}</td>
+        <br>
+    </tr>
+
+    <tr>
+        <td>{{ form.volume_norm.label }}</td>
+        <td>{{ form.volume_norm }}</td>
+        <br>
+    </tr>
+
+    <tr>
+        <td>{{ form.private.label }}</td>
+        <td>{{ form.private }}</td>
+        <br>
+    </tr>
+
 
     <div>
         <button type="submit" class="btn btn-default">Accept</button>
