--- a/app/templates/systemconfig.html
+++ b/app/templates/systemconfig.html
@@ -24,14 +24,14 @@
     </tr>
 
     <tr>
-        <td>{{ form.clearlog.label }}</td>
-        <td>{{ form.clearlog }}</td>
+        <td>{{ form.clear_log.label }}</td>
+        <td>{{ form.clear_log }}</td>
         <br>
     </tr>
 
     <tr>
-        <td>{{ form.clearplay.label }}</td>
-        <td>{{ form.clearplay }}</td>
+        <td>{{ form.clear_play.label }}</td>
+        <td>{{ form.clear_play }}</td>
         <br>
     </tr>
 
