--- a/app/templates/flash.html
+++ b/app/templates/flash.html
@@ -1,9 +1,10 @@
 {% with messages = get_flashed_messages() %}
 {% if messages %}
+{% for message in messages %}
 <div class="alert alert-info">
-    {% for message in messages %}
-    <button type="button" class="close" data-dismiss="alert">&times</button>
-    <strong>Warning!</strong>{{ message }}
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>This! </strong>
+    {{ message }}
 </div>
     {% endfor %}
 {% endif %}
