--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Hello!</h1>
+    {% include 'flash.html' %}
     <div>
         This is the MPD configuration system
     </div>
