--- a/app/templates/flash.html
+++ b/app/templates/flash.html
@@ -3,7 +3,8 @@
 {% for message in messages %}
 <div class="alert alert-info">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>This! </strong>
+    <strong>Attention! </strong>
+    <br/>
     {{ message }}
 </div>
     {% endfor %}
