using bootstrap on mpdconfig.html to improve the look of the view. implementation of popover for each setting.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,12 @@
 
         <title>DigiWave</title>
 
+        <style>
+            label {
+                font-weight: 400;
+            }
+        </style>
+
 
     </head>
 
