--- a/app/templates/networkconfig.html
+++ b/app/templates/networkconfig.html
@@ -19,7 +19,7 @@
 
     <tr>
         <td>{{ form.ssid.label }}</td>
-        <td>{{ form.ssid }}</td>
+        <td>{{ form.ssid(placeholder=" testing") }}</td>
         <br>
     </tr>
 
