--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -1,26 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Reboot or turn off your Hi-Pi</h1>
+<h3>Reboot or turn off your Hi-Pi</h3>
 
 {% include "flash.html" %}
-
+<div class="col-md-6 col-md-offset-3">
 <div class="well">
 
 <form class="form-group" action="" method="post" name="raspioff">
     {{ form.hidden_tag() }}
 
-    <tr>
-        <td>{{ form.on_off.label }}</td>
-        <td>{{ form.on_off }}</td>
-    </tr>
 
-    <div>
+    <div class="row">
+        <div class="col-xs-11 text-center">
+            <label>{{ form.on_off.label }}</label>
+            </div>
+        <div class="col-xs-11 text-left">
+            <td>{{ form.on_off }}</td>
+            </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-11 text-center">
         <button type="submit" class="btn btn-default">Accept</button>
+            </div>
     </div>
 
 </form>
-
+</div>
 </div>
 
 {% endblock %}
