--- a/app/templates/flash.html
+++ b/app/templates/flash.html
@@ -1,12 +1,15 @@
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-{% for message in messages %}
-<div class="alert alert-info">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong>Attention! </strong>
     <br/>
     {{ message }}
-</div>
+      </div>
     {% endfor %}
-{% endif %}
+  {% endif %}
 {% endwith %}
+
