--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,23 +7,21 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/static/css/landing-page.css" rel="stylesheet">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
 
         <title>DigiWave</title>
-
-        <style>
-            label {
-                font-weight: 400;
-            }
-        </style>
 
 
     </head>
 
     <body>
 
-    <div class="container">
+    <!--<div class="container-fluid">-->
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -68,6 +66,6 @@
 
         {% block content %}{% endblock %}
 
-        </div>
+        <!--</div>-->
     </body>
 </html>
