--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,99 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Hello!</h1>
-    {% include 'flash.html' %}
-    <div>
-        This is the MPD configuration system
+
+
+<div class="jumbotron">
+<div class="container">
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
     </div>
+
+
+
+
+<a name="services"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h3>
+                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                </div>
+                <div class="col-md-4 col-lg-offset-1 col-sm-6">
+                    <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
+                </div>
+            </div>
+
+        </div>
+</div>
+
+
+<div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-7 col-md-offset-1 col-sm-push-4">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">3D Device Mockups<br>by PSDCovers</h3>
+                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                </div>
+                <div class="col-md-4 col-sm-pull-8  col-md-6">
+                    <img class="img-responsive" src="static/images/hifiberry.png" alt="" style="max-height: 250px;">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+
+
+
+
+
+<div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h3>
+                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                </div>
+                <div class="col-md-4 col-lg-offset-1 col-sm-6">
+                    <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
+                </div>
+            </div>
+
+        </div>
+</div>
+
+
+<div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-7 col-md-offset-1 col-sm-push-4">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">3D Device Mockups<br>by PSDCovers</h3>
+                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                </div>
+                <div class="col-md-4 col-sm-pull-8  col-md-6">
+                    <img class="img-responsive" src="static/images/hifiberry.png" alt="" style="max-height: 250px;">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+
+
+
 {% endblock %}
