--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<h3>Configure your MPD</h3>
+
+<h3 style="text-align: center;">Configure your MPD</h3>
+
 
 {% include "flash.html" %}
 
@@ -17,7 +19,7 @@
             </div>
         <div class="col-xs-5">
             <td>{{ form.resampling(style= "width:80px;") }}
-                <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+                <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                data-content="All decoded audio will be converted to the specified
                format before being passed to the audio outputs. By default is disabled.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -32,7 +34,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.sample_rate(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="Some content inside the popover">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             </a>
@@ -45,7 +47,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.mp3_gapless(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="If your MP3s are ending abruptly, you may disable this setting.
                 If this solves the problem, you should fix the MP3 files
                 with vbrfix and then, re-enable this setting.">
@@ -60,7 +62,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.vol_norm(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="This will adjust all the playing audio to equal loudness. By default is disable.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             </a>
@@ -73,9 +75,23 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.replay_gain(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="This setting can have the argument 'off', 'album' or 'track'. See www.replaygain.org
                 for more details. This setting is off by default.">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6 text-right">
+            <label>{{ form.replaygain_preamp.label }}</label>
+        </div>
+        <div class="col-xs-5">
+            <td>{{ form.replaygain_preamp(style= "width:80px;") }}</td>
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+                data-content="This setting sets the pre-amp used for files that have ReplayGain tags, valid values
+                are between -15 and 15. By default this setting is disabled.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             </a>
         </div>
@@ -87,7 +103,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.audio_buff(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="This setting adjusts the size of internal decoded audio buffering.
                     Changing this may have undesired effects. Don't change this if you don't know what you are doing.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -101,7 +117,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.buff_fill(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="focus" data-placement="left"
+            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
                 data-content="This setting controls the percentage of the buffer which is filled before
                 beginning to play. Increasing this reduces the chance of audio file skipping, at the cost of increased
                 time prior to audio playback.">
@@ -122,9 +138,8 @@
 
 
 <script>
-$(document).ready(function(){
-    $('[data-toggle="popover"]').popover();
-});
+    $('[data-toggle="popover"]').popover({
+    container: 'body'});
 </script>
 
 
