--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,8 +21,9 @@
             <div class="row">
                 <div class="col-md-7 col-sm-6">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h3>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h3 class="section-heading">All your local music<br>All the sound quality</h3>
+                    <p class="lead">This is the perfect setup if you have an USB storage device or local NAS with all your music.
+                                    Just use your prefered iOS/Android mpd player and listen the music with the best quality</p>
                 </div>
                 <div class="col-md-4 col-lg-offset-1 col-sm-6">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
@@ -40,8 +41,10 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-1 col-sm-push-4">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">3D Device Mockups<br>by PSDCovers</h3>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h3 class="section-heading">Play from your local network<br>avoiding all the hazard</h3>
+                    <p class="lead">Enabling UPnP on your NAS will make everything works just like magic, use an iOS/Android UPnP controller
+                                    (BubbleUPnP or Linn Kazoo) as your remote and enjoy. <br>If this isn't good enough, you can
+                                    stream Tidal directly to your DigiWave as well</p>
                 </div>
                 <div class="col-md-4 col-sm-pull-8  col-md-6">
                     <img class="img-responsive" src="static/images/hifiberry.png" alt="" style="max-height: 250px;">
@@ -63,8 +66,9 @@
             <div class="row">
                 <div class="col-md-7 col-sm-6">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h3>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h3 class="section-heading">Enhance your LMS performance<br>with a beautiful sounding client</h3>
+                    <p class="lead">Use the DigiWave as an LMS client and control it with your favorite remote control  application such
+                        as iPeng or Orange Squeeze.<br>You can also add several DigiWave clients and have a fully multi-room solution</p>
                 </div>
                 <div class="col-md-4 col-lg-offset-1 col-sm-6">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
@@ -82,8 +86,9 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-1 col-sm-push-4">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">3D Device Mockups<br>by PSDCovers</h3>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h3 class="section-heading">ShairPort rendered<br>We haven't forgot you</h3>
+                    <p class="lead">Enjoy pristine and lossless CD quality music with Shairport-Sync(Airplay) and use you DigiWave as an
+                                    Airplay rendered</p>
                 </div>
                 <div class="col-md-4 col-sm-pull-8  col-md-6">
                     <img class="img-responsive" src="static/images/hifiberry.png" alt="" style="max-height: 250px;">
