Adding content to index.html. Fixing some issues on the text.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                     <ul class="nav navbar-nav">
 
                     <li><a href="{{ url_for('raspioff') }}">Power</a></li>
-                        <li><a href="#">Sources</a></li>
+                        <li><a href="{{ url_for('sourcesconfig') }}">Sources</a></li>
                         <li><a href="{{ url_for('mpdconfig') }}">MPD</a></li>
                         <li><a href="{{ url_for('networkconfig') }}">Network</a></li>
                         <li><a href="{{ url_for('systemconfig') }}">System</a></li>
