--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,8 @@
                 <div class="col-md-7 col-sm-6">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">All your local music<br>All the sound quality</h3>
-                    <p class="lead">This is the perfect setup if you have an USB storage device or local NAS with all your music.
-                                    Just use your prefered iOS/Android mpd player and listen the music with the best quality</p>
+                    <p class="lead">This is the perfect setup if you have an USB storage device with all your music.<br>
+                                    Just use your preferred iOS/Android mpd player and listen the music with the best quality</p>
                 </div>
                 <div class="col-md-4 col-lg-offset-1 col-sm-6">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
@@ -87,7 +87,7 @@
                 <div class="col-md-7 col-md-offset-1 col-sm-push-4">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">ShairPort rendered<br>We haven't forgot you</h3>
-                    <p class="lead">Enjoy pristine and lossless CD quality music with Shairport-Sync(Airplay) and use you DigiWave as an
+                    <p class="lead">Enjoy pristine and lossless CD quality music with Shairport-Sync (Airplay) and use your DigiWave as an
                                     Airplay rendered</p>
                 </div>
                 <div class="col-md-4 col-sm-pull-8  col-md-6">
