Fixed column issues on index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,13 +19,13 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-sm-6">
+                <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">All your local music<br>All the sound quality</h3>
                     <p class="lead">This is the perfect setup if you have an USB storage device with all your music.<br>
                                     Just use your preferred iOS/Android mpd player and listen the music with the best quality</p>
                 </div>
-                <div class="col-md-4 col-lg-offset-1 col-sm-6">
+                <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 col-lg-offset-1">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
                 </div>
             </div>
@@ -39,14 +39,14 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-7 col-md-offset-1 col-sm-push-4">
+                <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12 col-lg-push-5 col-md-push-5 col-sm-push-6 col-xs-push-0">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Play from your local network<br>avoiding all the hazard</h3>
                     <p class="lead">Enabling UPnP on your NAS will make everything works just like magic, use an iOS/Android UPnP controller
                                     (BubbleUPnP or Linn Kazoo) as your remote and enjoy. <br>If this isn't good enough, you can
                                     stream Tidal directly to your DigiWave as well</p>
                 </div>
-                <div class="col-md-4 col-sm-pull-8  col-md-6">
+                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 col-lg-pull-7 col-md-pull-7 col-sm-pull-6 col-xs-pull-0">
                     <img class="img-responsive" src="static/images/hifiberry.png" alt="" style="max-height: 250px;">
                 </div>
             </div>
@@ -64,13 +64,13 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-sm-6">
+                <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Enhance your LMS performance<br>with a beautiful sounding client</h3>
                     <p class="lead">Use the DigiWave as an LMS client and control it with your favorite remote control  application such
                         as iPeng or Orange Squeeze.<br>You can also add several DigiWave clients and have a fully multi-room solution</p>
                 </div>
-                <div class="col-md-4 col-lg-offset-1 col-sm-6">
+                <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 col-lg-offset-1">
                     <img class="img-responsive" src="static/images/raspi.png" alt="" style="max-height: 250px;">
                 </div>
             </div>
@@ -99,6 +99,10 @@
         <!-- /.container -->
 
     </div>
+
+
+
+
 
 
 
