Spotify, Google and Network settings removed

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.mp3_gapless(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="If your MP3s are ending abruptly, you may disable this setting.
                 If this solves the problem, you should fix the MP3 files
                 with vbrfix and then, re-enable this setting.">
@@ -35,7 +35,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.vol_norm(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="This will adjust all the playing audio to equal loudness. By default is disable.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             </a>
@@ -48,7 +48,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.replay_gain(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="This setting can have the argument 'off', 'album' or 'track'. See www.replaygain.org
                 for more details. This setting is off by default.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -62,7 +62,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.replaygain_preamp(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="This setting sets the pre-amp used for files that have ReplayGain tags, valid values
                 are between -15 and 15. By default this setting is disabled.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -76,7 +76,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.audio_buff(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="This setting adjusts the size of internal decoded audio buffering.
                     Changing this may have undesired effects. Don't change this if you don't know what you are doing.">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-xs-5">
             <td>{{ form.buff_fill(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+            <a href="#" data-toggle="popover" data-placement="bottom"
                 data-content="This setting controls the percentage of the buffer which is filled before
                 beginning to play. Increasing this reduces the chance of audio file skipping, at the cost of increased
                 time prior to audio playback.">
