--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -8,109 +8,118 @@
 
 {% include "flash.html" %}
 
-<div class="col-md-6 col-md-offset-3">
+<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
     <div class="well">
-        <h4>Volume and Replay Gain</h4>
-<form action="" method="post" name="form_volume">
-    {{ form_volume.hidden_tag() }}
-
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-            <label>{{ form_volume.vol_norm.label }}</label>
-        </div>
-        <div class="col-xs-5">
-            <td>{{ form_volume.vol_norm(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-placement="bottom"
-                data-content="This will adjust all the playing audio to equal loudness. By default is disable.">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            </a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-            <label>{{ form_volume.replay_gain.label }}</label>
-        </div>
-        <div class="col-xs-5">
-            <td>{{ form_volume.replay_gain(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-placement="bottom"
-                data-content="This setting can have the argument 'off', 'album' or 'track'. See www.replaygain.org
-                for more details. This setting is off by default.">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            </a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-            <label>{{ form_volume.replaygain_preamp.label }}</label>
-        </div>
-        <div class="col-xs-5">
-            <td>{{ form_volume.replaygain_preamp(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-placement="bottom"
-                data-content="This setting sets the pre-amp used for files that have ReplayGain tags, valid values
-                are between -15 and 15. By default this setting is disabled.">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            </a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-        <button type="submit" class="btn btn-default">Accept</button>
-        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+            <h4>Volume and Replay Gain</h4>
         </div>
 
-</form>
+
+        <form action="" method="post" name="form_volume">
+        {{ form_volume.hidden_tag() }}
+
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_volume.vol_norm.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_volume.vol_norm(style= "width:80px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="This will adjust all the playing audio to equal loudness. By default is disable.">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_volume.replay_gain.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_volume.replay_gain(style= "width:80px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="This setting can have the argument 'off', 'album' or 'track'. See www.replaygain.org
+                    for more details. This setting is off by default.">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_volume.replaygain_preamp.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_volume.replaygain_preamp(style= "width:80px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="This setting sets the pre-amp used for files that have ReplayGain tags, valid values
+                    are between -15 and 15. By default this setting is disabled.">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <button type="submit" class="btn btn-default">Accept</button>
+            </div>
+        </div>
+
+        </form>
 
         <br>
         <br>
 
-<h4>Buffering</h4>
-
-<form action="" method="post" name="form_buffer">
-    {{ form_buffer.hidden_tag() }}
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-            <label>{{ form_buffer.audio_buff.label }}</label>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <h4>Buffering</h4>
+            </div>
         </div>
-        <div class="col-xs-5">
-            <td>{{ form_buffer.audio_buff(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-placement="bottom"
-                data-content="This setting adjusts the size of internal decoded audio buffering.
+
+        <form action="" method="post" name="form_buffer">
+            {{ form_buffer.hidden_tag() }}
+
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                    <label>{{ form_buffer.audio_buff.label }}</label>
+                </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_buffer.audio_buff(style= "width:80px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="This setting adjusts the size of internal decoded audio buffering.
                     Changing this may have undesired effects. Don't change this if you don't know what you are doing.">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            </a>
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
         </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_buffer.buff_fill.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_buffer.buff_fill(style= "width:80px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="This setting controls the percentage of the buffer which is filled before
+                    beginning to play. Increasing this reduces the chance of audio file skipping, at the cost of increased
+                    time prior to audio playback.">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <button type="submit" class="btn btn-default">Accept</button>
+            </div>
+        </div>
+
+        </form>
+
     </div>
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-            <label>{{ form_buffer.buff_fill.label }}</label>
-        </div>
-        <div class="col-xs-5">
-            <td>{{ form_buffer.buff_fill(style= "width:80px;") }}</td>
-            <a href="#" data-toggle="popover" data-placement="bottom"
-                data-content="This setting controls the percentage of the buffer which is filled before
-                beginning to play. Increasing this reduces the chance of audio file skipping, at the cost of increased
-                time prior to audio playback.">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            </a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-6 text-right">
-        <button type="submit" class="btn btn-default">Accept</button>
-        </div>
-        </div>
-
-</form>
-
 </div>
-    </div>
 
 
 <script>
