--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -1,33 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>Reboot or turn off your Hi-Pi</h3>
+<h3 style="text-align: center;">Reboot or Turn Off your DigiWave</h3>
 
 {% include "flash.html" %}
-<div class="col-md-6 col-md-offset-3">
-<div class="well">
+<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+    <div class="well">
 
-<form class="form-group" action="" method="post" name="raspioff">
-    {{ form.hidden_tag() }}
+    <form class="form-group" action="" method="post" name="raspioff">
+        {{ form.hidden_tag() }}
 
-
-    <div class="row">
-        <div class="col-xs-11 text-center">
-            <label>{{ form.on_off.label }}</label>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <h4>Select Reboot or Shutdown</h4>
             </div>
-        <div class="col-xs-11 text-left">
-            <td>{{ form.on_off }}</td>
+            <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-4">
+                <td>{{ form.on_off }}</td>
             </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <button type="submit" class="btn btn-default">Accept</button>
+            </div>
+        </div>
+    </form>
     </div>
-
-    <div class="row">
-        <div class="col-xs-11 text-center">
-        <button type="submit" class="btn btn-default">Accept</button>
-            </div>
-    </div>
-
-</form>
-</div>
 </div>
 
 {% endblock %}
