mpd_conf viewer fully working

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h3 style="text-align: center;">Configure your MPD</h3>
+<h3 style="text-align: center;">Configure your DigiWave</h3>
 
 
 {% include "flash.html" %}
@@ -124,7 +124,7 @@
 
  <div class="bs-example">
     <!-- Button HTML (to Trigger Modal) -->
-    <a href="{{ url_for('showmpd') }}" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Current Settings</a>
+    <a href="{{ url_for('showmpd') }}" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Current Settings</a>
 
     <!-- Modal HTML -->
     <div id="myModal" class="modal fade">
