--- a/app/templates/showmpd.html
+++ b/app/templates/showmpd.html
@@ -1,5 +1,12 @@
 {% block content %}
 
+
+
+<div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" style="text-align:center">Settings</h4>
+      </div>
+
 <div class="row">
     <br>
     {% for key, value in result.iteritems() %}
@@ -13,5 +20,8 @@
 </div>
 <br>
 
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
 
 {% endblock %}
