--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -62,6 +62,18 @@
         </div>
 
         <div class="row">
+	        <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-12">
+                {% if form_volume.replaygain_preamp.errors %}
+                <ul class="errors">
+                {% for error in form_volume.replaygain_preamp.errors %}
+        	        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                 <button type="submit" class="btn btn-default">Accept</button>
             </div>
