cleaning code and comments to mpdconfig.html file

--- a/app/templates/mpdconfig.html
+++ b/app/templates/mpdconfig.html
@@ -61,6 +61,7 @@
             </div>
         </div>
 
+        <!-- Validation for replaygain_preamp value -->
         <div class="row">
 	        <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-12">
                 {% if form_volume.replaygain_preamp.errors %}
@@ -142,7 +143,7 @@
     <div id="myModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <!-- Content will be loaded here from "remote.php" file -->
+                <!-- Content will be loaded here from "showmpd.html" file -->
             </div>
         </div>
     </div>
