--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3 style="text-align: center;">Reboot or Turn Off your DigiWave</h3>
+<h3 style="text-align: center;">System Settings</h3>
 
 {% include "flash.html" %}
 <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
@@ -12,7 +12,8 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <h4>Select Reboot or Shutdown</h4>
+                <h4>Reboot or Shutdown the DigiWave</h4>
+                <br>
             </div>
             <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-4">
                 <td>{{ form.on_off }}</td>
@@ -25,6 +26,36 @@
             </div>
         </div>
     </form>
+
+    <br>
+
+    <form action="" method="post" name="form_host">
+        {{ form_host.hidden_tag() }}
+
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <h4>Change the Hostname of DigiWave</h4>
+                <br>
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                <label>{{ form_host.hostname.label }}</label>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <td>{{ form_host.hostname (style= "width:140px;") }}</td>
+            </div>
+        </div>
+
+        <br>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                <button type="submit" class="btn btn-default">Accept</button>
+            </div>
+        </div>
+
+    </form>
+
     </div>
 </div>
 
