--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -15,6 +15,9 @@
                 <h4>Reboot or Shutdown the DigiWave</h4>
                 <br>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-4">
                 <td>{{ form.on_off }}</td>
             </div>
@@ -28,22 +31,44 @@
     </form>
 
     <br>
+    <br>
+
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+            <h4>Change the Hostname of DigiWave</h4>
+            <br>
+        </div>
+    </div>
 
     <form action="" method="post" name="form_host">
         {{ form_host.hidden_tag() }}
 
 
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <h4>Change the Hostname of DigiWave</h4>
-                <br>
-            </div>
-
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
                 <label>{{ form_host.hostname.label }}</label>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                <td>{{ form_host.hostname (style= "width:140px;") }}</td>
+                <td>{{ form_host.hostname(style= "width:100px;") }}</td>
+                    <a href="#" data-toggle="popover" data-placement="bottom"
+                    data-content="Hostname must contain only letters, numbers or underscore and
+                    must be between 4 and 30 characters">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+	        <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-12">
+                {% if form_host.hostname.errors %}
+                <ul class="errors">
+                {% for error in form_host.hostname.errors %}
+        	        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
             </div>
         </div>
 
@@ -58,5 +83,11 @@
 
     </div>
 </div>
+
+
+<script>
+    $('[data-toggle="popover"]').popover({
+    container: 'body'});
+</script>
 
 {% endblock %}
