visual changes to raspioff.html, validation working

--- a/app/templates/raspioff.html
+++ b/app/templates/raspioff.html
@@ -12,8 +12,7 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                <h4>Reboot or Shutdown the DigiWave</h4>
-                <br>
+                <h4>Reboot/Shutdown your DigiWave</h4>
             </div>
         </div>
 
@@ -36,8 +35,7 @@
 
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-            <h4>Change the Hostname of DigiWave</h4>
-            <br>
+            <h4>Change your DigiWave's name</h4>
         </div>
     </div>
 
@@ -52,8 +50,8 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <td>{{ form_host.hostname(style= "width:100px;") }}</td>
                     <a href="#" data-toggle="popover" data-placement="bottom"
-                    data-content="Hostname must contain only letters, numbers or underscore and
-                    must be between 4 and 30 characters">
+                    data-content="Hostname needs to be between 4 and 30 characters and
+                    must contain only letters, numbers or underscore">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     </a>
             </div>
