--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,16 +30,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">Andes Audio</a>
+                <a class="navbar-brand" href="{{ url_for('index') }}">DigiWave</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                    <li><a href="{{ url_for('raspioff') }}">Power</a></li>
-                        <li><a href="{{ url_for('mpdconfig') }}">MPD</a></li>
-                        <li><a href="{{ url_for('systemconfig') }}">System</a></li>
+                    <li><a href="{{ url_for('raspioff') }}">System</a></li>
+                        <li><a href="{{ url_for('mpdconfig') }}">Player</a></li>
                     </ul>
 
 
